--- a/Notebooks/reddit_eda_V2.ipynb
+++ b/Notebooks/reddit_eda_V2.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "bf8ee377",
    "metadata": {},
    "outputs": [
@@ -932,7 +932,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "9a37783c",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
        "1010599  You're definitely an intolerant homophobe. Jud...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1895,6 +1895,22 @@
     "\n",
     "As the 55 null `comments` represent "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "913c2c31",
+   "metadata": {},
+   "source": [
+    "Time to make a change. How many lines will be changed?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd4ffc6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
