and another one

--- a/Notebooks/reddit_eda_V2.ipynb
+++ b/Notebooks/reddit_eda_V2.ipynb
@@ -1,9 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5069f1ce",
+   "metadata": {},
+   "source": [
+    "This is the date."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf9300ea",
+   "metadata": {},
+   "source": [
+    "This is my name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23c88e0",
+   "metadata": {},
+   "source": [
+    "This is a title"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25359907",
+   "metadata": {},
+   "source": [
+    "This is an intro"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6e131a64",
+   "execution_count": null,
+   "id": "21b5e846",
    "metadata": {},
    "outputs": [],
    "source": [
