--- a/Notebooks/reddit_eda.ipynb
+++ b/Notebooks/reddit_eda.ipynb
@@ -4425,7 +4425,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "d6ba9af3",
+   "id": "a453e8f7",
    "metadata": {
     "scrolled": true
    },
@@ -4456,7 +4456,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "94b5d781",
+   "id": "f8340e22",
    "metadata": {},
    "outputs": [
     {
@@ -4477,7 +4477,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "e12891fc",
+   "id": "15f609f9",
    "metadata": {
     "scrolled": true
    },
@@ -4526,7 +4526,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "2183403d",
+   "id": "c5fe78f1",
    "metadata": {},
    "outputs": [
     {
@@ -4555,7 +4555,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "e406f99b",
+   "id": "dc88f977",
    "metadata": {},
    "outputs": [
     {
@@ -4576,7 +4576,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "18d988e3",
+   "id": "de95629b",
    "metadata": {},
    "outputs": [
     {
@@ -4972,7 +4972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d14b4a6d",
+   "id": "c680f1c2",
    "metadata": {},
    "source": [
     "Let us also see if at a lower `length` cutoff the same pattern holds true, if all comments longer than 200 words are all copied and pasted."
@@ -4981,7 +4981,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "707c9d13",
+   "id": "4fe8e206",
    "metadata": {
     "scrolled": false
    },
@@ -5032,7 +5032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdff818b",
+   "id": "f0f8eb14",
    "metadata": {},
    "source": [
     "The same seems to hold true of all comments longer than 300 words. We can safely drop these comments."
@@ -5041,7 +5041,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "bd7b49a5",
+   "id": "a5fa48f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5051,7 +5051,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "285428cc",
+   "id": "52a0a6e0",
    "metadata": {},
    "outputs": [
     {
@@ -6078,7 +6078,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "ee1dfbeb",
+   "id": "b4d0dff3",
    "metadata": {
     "scrolled": true
    },
@@ -6101,7 +6101,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "33092317",
+   "id": "318c1f87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6111,7 +6111,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "c71741b0",
+   "id": "9decf665",
    "metadata": {},
    "outputs": [
     {
@@ -6234,7 +6234,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "f4edf60a",
+   "id": "9d81bd80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6249,7 +6249,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "366a50bb",
+   "id": "7a4d8f45",
    "metadata": {},
    "outputs": [
     {
@@ -6270,7 +6270,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "790976e8",
+   "id": "c46b0612",
    "metadata": {},
    "outputs": [
     {
@@ -6291,7 +6291,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "b22a6a37",
+   "id": "5e192223",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6302,7 +6302,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "69430b94",
+   "id": "d3e90a52",
    "metadata": {},
    "outputs": [
     {
@@ -6437,7 +6437,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "f8dfabfb",
+   "id": "b6475adc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6447,7 +6447,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "b7a0b514",
+   "id": "dba13f62",
    "metadata": {},
    "outputs": [
     {
@@ -6576,7 +6576,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "480ee392",
+   "id": "da493e4f",
    "metadata": {
     "scrolled": true
    },
@@ -6701,7 +6701,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "5b2dbaad",
+   "id": "685a6ba6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6712,7 +6712,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "681899d8",
+   "id": "709b118f",
    "metadata": {
     "scrolled": true
    },
@@ -6836,7 +6836,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "5de7566c",
+   "id": "a7179631",
    "metadata": {},
    "outputs": [
     {
@@ -6965,7 +6965,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "7e886e77",
+   "id": "5fbc8d2e",
    "metadata": {},
    "outputs": [
     {
@@ -6986,7 +6986,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "b947fc41",
+   "id": "ef85d5d6",
    "metadata": {},
    "outputs": [
     {
@@ -7022,7 +7022,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "cc6e12fe",
+   "id": "f9ba5567",
    "metadata": {},
    "outputs": [
     {
@@ -7058,7 +7058,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "f52135de",
+   "id": "31fafe84",
    "metadata": {},
    "outputs": [
     {
@@ -7088,7 +7088,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "9f4128c5",
+   "id": "2359ab6c",
    "metadata": {},
    "outputs": [
     {
@@ -7118,7 +7118,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "5f265400",
+   "id": "8fee09d1",
    "metadata": {},
    "outputs": [
     {
@@ -7139,7 +7139,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "a9bc6e1e",
+   "id": "a360c2e8",
    "metadata": {},
    "outputs": [
     {
@@ -7178,7 +7178,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "7a49bda5",
+   "id": "139da323",
    "metadata": {},
    "outputs": [
     {
@@ -7294,7 +7294,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "a24bd385",
+   "id": "1e5c455d",
    "metadata": {},
    "outputs": [
     {
@@ -7331,7 +7331,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "f7781f52",
+   "id": "6a4025cb",
    "metadata": {},
    "outputs": [
     {
@@ -7368,7 +7368,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "6bbbebbe",
+   "id": "8a5e2c7b",
    "metadata": {},
    "outputs": [
     {
@@ -7411,7 +7411,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "aa808a9e",
+   "id": "823be900",
    "metadata": {},
    "outputs": [
     {
@@ -7454,7 +7454,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "6d8d38ab",
+   "id": "7a770ac1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7464,7 +7464,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "bd553529",
+   "id": "57625969",
    "metadata": {},
    "outputs": [
     {
@@ -7568,7 +7568,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "4ee4cf00",
+   "id": "e5c7a8ec",
    "metadata": {},
    "outputs": [
     {
@@ -7590,7 +7590,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "8c65a500",
+   "id": "591657e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7599,8 +7599,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 177,
+   "id": "1046f445",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "subreddit\n",
+       "AskReddit                65671\n",
+       "politics                 39492\n",
+       "worldnews                26375\n",
+       "leagueoflegends          21034\n",
+       "pcmasterrace             18986\n",
+       "                         ...  \n",
+       "LabiaGW                      1\n",
+       "Expected                     1\n",
+       "AnimalsStoppingFights        1\n",
+       "panderingfromtheright        1\n",
+       "Pandemic                     1\n",
+       "Name: count, Length: 14876, dtype: int64"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reddit['subreddit'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "13da7ed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6060"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(reddit['subreddit'].value_counts() < 2).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "id": "a5bfee6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4073675719279376"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(reddit['subreddit'].value_counts() < 2).sum() / reddit['subreddit'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "e2b8a868",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6462086582414628"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(reddit['subreddit'].value_counts() < 5).sum() / reddit['subreddit'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "b4b15c65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reddit.drop(columns='subreddit', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "4ef13857",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>NC and NH.</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>You do know west teams play against west teams...</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>They were underdogs earlier today, but since G...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>This meme isn't funny none of the \"new york ni...</td>\n",
+       "      <td>-8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I could use one of those tools.</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label                                            comment  score\n",
+       "0      0                                         NC and NH.      2\n",
+       "1      0  You do know west teams play against west teams...     -4\n",
+       "2      0  They were underdogs earlier today, but since G...      3\n",
+       "3      0  This meme isn't funny none of the \"new york ni...     -8\n",
+       "4      0                    I could use one of those tools.      6"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reddit.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "637c3a94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        , -0.01002174],\n",
+       "       [-0.01002174,  1.        ]])"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(reddit['label'], reddit['score'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "a7e641d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reddit.drop(columns='score', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6d740f14",
+   "id": "119c230f",
    "metadata": {},
    "outputs": [],
    "source": []
