just a simple export

--- a/Notebooks/reddit_eda.ipynb
+++ b/Notebooks/reddit_eda.ipynb
@@ -4425,7 +4425,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "a453e8f7",
+   "id": "95490d19",
    "metadata": {
     "scrolled": true
    },
@@ -4456,7 +4456,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "f8340e22",
+   "id": "61b2bf96",
    "metadata": {},
    "outputs": [
     {
@@ -4477,7 +4477,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "15f609f9",
+   "id": "44ef4ca0",
    "metadata": {
     "scrolled": true
    },
@@ -4526,7 +4526,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "c5fe78f1",
+   "id": "ede8fcf3",
    "metadata": {},
    "outputs": [
     {
@@ -4555,7 +4555,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "dc88f977",
+   "id": "293d9f2d",
    "metadata": {},
    "outputs": [
     {
@@ -4576,7 +4576,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "de95629b",
+   "id": "d701ad39",
    "metadata": {},
    "outputs": [
     {
@@ -4972,7 +4972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c680f1c2",
+   "id": "e1cd5ae5",
    "metadata": {},
    "source": [
     "Let us also see if at a lower `length` cutoff the same pattern holds true, if all comments longer than 200 words are all copied and pasted."
@@ -4981,7 +4981,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "4fe8e206",
+   "id": "0dd8b97c",
    "metadata": {
     "scrolled": false
    },
@@ -5032,7 +5032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f8eb14",
+   "id": "30e724d7",
    "metadata": {},
    "source": [
     "The same seems to hold true of all comments longer than 300 words. We can safely drop these comments."
@@ -5041,7 +5041,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "a5fa48f9",
+   "id": "0314d9b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5051,7 +5051,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "52a0a6e0",
+   "id": "9cb8a262",
    "metadata": {},
    "outputs": [
     {
@@ -6078,7 +6078,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "b4d0dff3",
+   "id": "0a7ad067",
    "metadata": {
     "scrolled": true
    },
@@ -6101,7 +6101,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "318c1f87",
+   "id": "66bbb963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6111,7 +6111,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "9decf665",
+   "id": "311bec8e",
    "metadata": {},
    "outputs": [
     {
@@ -6234,7 +6234,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "9d81bd80",
+   "id": "35477829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6249,7 +6249,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "7a4d8f45",
+   "id": "672aa568",
    "metadata": {},
    "outputs": [
     {
@@ -6270,7 +6270,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "c46b0612",
+   "id": "9380069f",
    "metadata": {},
    "outputs": [
     {
@@ -6291,7 +6291,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "5e192223",
+   "id": "b8fcfb48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6302,7 +6302,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "d3e90a52",
+   "id": "3874e720",
    "metadata": {},
    "outputs": [
     {
@@ -6437,7 +6437,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "b6475adc",
+   "id": "2e35e801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6447,7 +6447,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "dba13f62",
+   "id": "a16f3541",
    "metadata": {},
    "outputs": [
     {
@@ -6576,7 +6576,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "da493e4f",
+   "id": "2efe09ed",
    "metadata": {
     "scrolled": true
    },
@@ -6701,7 +6701,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "685a6ba6",
+   "id": "7e898096",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6712,7 +6712,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "709b118f",
+   "id": "4898137c",
    "metadata": {
     "scrolled": true
    },
@@ -6836,7 +6836,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "a7179631",
+   "id": "9d7de871",
    "metadata": {},
    "outputs": [
     {
@@ -6965,7 +6965,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "5fbc8d2e",
+   "id": "057827c5",
    "metadata": {},
    "outputs": [
     {
@@ -6986,7 +6986,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "ef85d5d6",
+   "id": "5a15227d",
    "metadata": {},
    "outputs": [
     {
@@ -7022,7 +7022,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "f9ba5567",
+   "id": "6199081b",
    "metadata": {},
    "outputs": [
     {
@@ -7058,7 +7058,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "31fafe84",
+   "id": "e2f6d95b",
    "metadata": {},
    "outputs": [
     {
@@ -7088,7 +7088,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "2359ab6c",
+   "id": "975bc9fc",
    "metadata": {},
    "outputs": [
     {
@@ -7118,7 +7118,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "8fee09d1",
+   "id": "09addb06",
    "metadata": {},
    "outputs": [
     {
@@ -7139,7 +7139,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "a360c2e8",
+   "id": "ad2325f2",
    "metadata": {},
    "outputs": [
     {
@@ -7178,7 +7178,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "139da323",
+   "id": "7e6a2f4c",
    "metadata": {},
    "outputs": [
     {
@@ -7294,7 +7294,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "1e5c455d",
+   "id": "8a282436",
    "metadata": {},
    "outputs": [
     {
@@ -7331,7 +7331,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "6a4025cb",
+   "id": "4a70b5e8",
    "metadata": {},
    "outputs": [
     {
@@ -7368,7 +7368,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "8a5e2c7b",
+   "id": "07f9a7f7",
    "metadata": {},
    "outputs": [
     {
@@ -7411,7 +7411,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "823be900",
+   "id": "76a57592",
    "metadata": {},
    "outputs": [
     {
@@ -7454,7 +7454,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "7a770ac1",
+   "id": "7c7a7390",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7464,7 +7464,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "57625969",
+   "id": "1eb69b5a",
    "metadata": {},
    "outputs": [
     {
@@ -7568,7 +7568,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "e5c7a8ec",
+   "id": "0bc6e216",
    "metadata": {},
    "outputs": [
     {
@@ -7590,7 +7590,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "591657e7",
+   "id": "31fb7c7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7600,7 +7600,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "1046f445",
+   "id": "6a2dc9b2",
    "metadata": {},
    "outputs": [
     {
@@ -7633,7 +7633,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "13da7ed9",
+   "id": "d8632d60",
    "metadata": {},
    "outputs": [
     {
@@ -7654,7 +7654,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "a5bfee6c",
+   "id": "b585aaec",
    "metadata": {},
    "outputs": [
     {
@@ -7675,7 +7675,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "e2b8a868",
+   "id": "1662c077",
    "metadata": {},
    "outputs": [
     {
@@ -7696,7 +7696,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "b4b15c65",
+   "id": "a21fb419",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7706,7 +7706,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "4ef13857",
+   "id": "1ef0dc25",
    "metadata": {},
    "outputs": [
     {
@@ -7791,7 +7791,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "637c3a94",
+   "id": "65246435",
    "metadata": {},
    "outputs": [
     {
@@ -7813,7 +7813,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "a7e641d0",
+   "id": "d1ea2e64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7822,8 +7822,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 193,
+   "id": "f739873f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reddit.to_csv('reddit_final.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "119c230f",
+   "id": "6f843975",
    "metadata": {},
    "outputs": [],
    "source": []
