everyones favourite train/test/split

--- a/Notebooks/reddit_logreg.ipynb
+++ b/Notebooks/reddit_logreg.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "bd632a83",
+   "execution_count": 1,
+   "id": "288af0cf",
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +22,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set()\n",
+    "pd.set_option('display.max_columns', None, 'max_colwidth', 250)\n",
     "\n",
     "import nltk\n",
     "nltk.download('stopwords')\n",
@@ -37,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "853bca32",
+   "execution_count": 2,
+   "id": "0035eda6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "45ae9ea2",
+   "execution_count": 3,
+   "id": "9f29b079",
    "metadata": {},
    "outputs": [
     {
@@ -85,17 +86,17 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>You do know west teams play against west teams...</td>\n",
+       "      <td>You do know west teams play against west teams more than east teams right?</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>They were underdogs earlier today, but since G...</td>\n",
+       "      <td>They were underdogs earlier today, but since Gronk's announcement this afternoon, the Vegas line has moved to patriots -1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>This meme isn't funny none of the \"new york ni...</td>\n",
+       "      <td>This meme isn't funny none of the \"new york nigga\" ones are.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -107,15 +108,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   label                                            comment\n",
-       "0      0                                         NC and NH.\n",
-       "1      0  You do know west teams play against west teams...\n",
-       "2      0  They were underdogs earlier today, but since G...\n",
-       "3      0  This meme isn't funny none of the \"new york ni...\n",
-       "4      0                    I could use one of those tools."
+       "   label  \\\n",
+       "0      0   \n",
+       "1      0   \n",
+       "2      0   \n",
+       "3      0   \n",
+       "4      0   \n",
+       "\n",
+       "                                                                                                                     comment  \n",
+       "0                                                                                                                 NC and NH.  \n",
+       "1                                                 You do know west teams play against west teams more than east teams right?  \n",
+       "2  They were underdogs earlier today, but since Gronk's announcement this afternoon, the Vegas line has moved to patriots -1  \n",
+       "3                                                               This meme isn't funny none of the \"new york nigga\" ones are.  \n",
+       "4                                                                                            I could use one of those tools.  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,8 +134,304 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "db722541",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>comment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>139485</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Trufant</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276174</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Too soon</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>590507</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Also, phone lights have no throw.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>652534</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The Pirate Bay, of course!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333855</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Doesn't Sop have a Mac version though?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>658094</th>\n",
+       "      <td>1</td>\n",
+       "      <td>You're a white chick, it will become natural.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47928</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Forgot the</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>355899</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Who said i wouldn't?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233958</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3756D QUANTUM GALACTIC SPACE CHESS GUYS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194496</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Of course they're all white lol</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916291</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Thanks, I'll be loading up my pillow cases with soda cans just in case.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193128</th>\n",
+       "      <td>0</td>\n",
+       "      <td>But, these are the sample sizes that will be needed to find an effect of genes on behavior (i.e., all genetic effects are really small).</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>488816</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I am glad we don't use those helmets .</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>750865</th>\n",
+       "      <td>1</td>\n",
+       "      <td>oh but this time it's ol' cranky corcoran, so his tenure in austin means his opinion is more valid.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797538</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Yeah, GRRM would never be so cruel... wait what?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>630306</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Don't forget the elderly and infirmed.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>475927</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Yeah I'm pretty sure some Turks on Reddit decide that stuff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>705740</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Or we could go Logan's Run on them.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286445</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Papa Rickon was rocking it a few weeks ago and even Sansa has her hair pulled back in a similar manner.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430555</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Just admit it!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42110</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Nice meme steal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221773</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I fail to see how any of this amounts to clues</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>692046</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Seriously I'm a Muslim who thinks i'm pretty integrated in British society, why the hell would i join the armed forces, they've been bombing muslims for aslong as if been alive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>465585</th>\n",
+       "      <td>0</td>\n",
+       "      <td>We have rules for a reason.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437682</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Ahh yes, the invasion europe so desperately needs right now.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        label  \\\n",
+       "139485      0   \n",
+       "276174      0   \n",
+       "590507      0   \n",
+       "652534      1   \n",
+       "333855      0   \n",
+       "658094      1   \n",
+       "47928       1   \n",
+       "355899      0   \n",
+       "233958      1   \n",
+       "194496      1   \n",
+       "916291      0   \n",
+       "193128      0   \n",
+       "488816      0   \n",
+       "750865      1   \n",
+       "797538      0   \n",
+       "630306      0   \n",
+       "475927      1   \n",
+       "705740      0   \n",
+       "286445      0   \n",
+       "430555      0   \n",
+       "42110       1   \n",
+       "221773      0   \n",
+       "692046      0   \n",
+       "465585      0   \n",
+       "437682      1   \n",
+       "\n",
+       "                                                                                                                                                                                 comment  \n",
+       "139485                                                                                                                                                                           Trufant  \n",
+       "276174                                                                                                                                                                          Too soon  \n",
+       "590507                                                                                                                                                 Also, phone lights have no throw.  \n",
+       "652534                                                                                                                                                        The Pirate Bay, of course!  \n",
+       "333855                                                                                                                                            Doesn't Sop have a Mac version though?  \n",
+       "658094                                                                                                                                     You're a white chick, it will become natural.  \n",
+       "47928                                                                                                                                                                         Forgot the  \n",
+       "355899                                                                                                                                                              Who said i wouldn't?  \n",
+       "233958                                                                                                                                           3756D QUANTUM GALACTIC SPACE CHESS GUYS  \n",
+       "194496                                                                                                                                                   Of course they're all white lol  \n",
+       "916291                                                                                                           Thanks, I'll be loading up my pillow cases with soda cans just in case.  \n",
+       "193128                                          But, these are the sample sizes that will be needed to find an effect of genes on behavior (i.e., all genetic effects are really small).  \n",
+       "488816                                                                                                                                            I am glad we don't use those helmets .  \n",
+       "750865                                                                               oh but this time it's ol' cranky corcoran, so his tenure in austin means his opinion is more valid.  \n",
+       "797538                                                                                                                                  Yeah, GRRM would never be so cruel... wait what?  \n",
+       "630306                                                                                                                                            Don't forget the elderly and infirmed.  \n",
+       "475927                                                                                                                       Yeah I'm pretty sure some Turks on Reddit decide that stuff  \n",
+       "705740                                                                                                                                               Or we could go Logan's Run on them.  \n",
+       "286445                                                                           Papa Rickon was rocking it a few weeks ago and even Sansa has her hair pulled back in a similar manner.  \n",
+       "430555                                                                                                                                                                    Just admit it!  \n",
+       "42110                                                                                                                                                                    Nice meme steal  \n",
+       "221773                                                                                                                                    I fail to see how any of this amounts to clues  \n",
+       "692046  Seriously I'm a Muslim who thinks i'm pretty integrated in British society, why the hell would i join the armed forces, they've been bombing muslims for aslong as if been alive  \n",
+       "465585                                                                                                                                                       We have rules for a reason.  \n",
+       "437682                                                                                                                      Ahh yes, the invasion europe so desperately needs right now.  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reddit.sample(25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4f1a6f6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = reddit['comment']\n",
+    "y = reddit['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6e4c6a1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first split into test and remainder\n",
+    "X_remainder, X_test, y_remainder, y_test = train_test_split(X, y, test_size = 0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "11971f84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# second split into train and validation\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_remainder, y_remainder, test_size = 0.25, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4957fbb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stemmer = nltk.stem.PorterStemmer()\n",
+    "stop_words = stopwords.words('english')\n",
+    "\n",
+    "def tokenizer(sentence):\n",
+    "    \n",
+    "    num_range = range(0,31)\n",
+    "    \n",
+    "    for num in num_range:\n",
+    "        sentence = sentence.replace(str(num), '')\n",
+    "    \n",
+    "    # remove punctuation and set to lower case\n",
+    "    for punctuation_mark in string.punctuation:\n",
+    "        sentence = sentence.replace(punctuation_mark,'').lower()\n",
+    "        \n",
+    "    \n",
+    "    # split sentence into words\n",
+    "    words_list = sentence.split(' ')\n",
+    "    tokens = []\n",
+    "    \n",
+    "    \n",
+    "    # remove stopwords and any tokens that are just empty strings\n",
+    "    for word in words_list:\n",
+    "        if (not word in stop_words) and (word!=''):\n",
+    "            # Stem words\n",
+    "            stemmed_word = stemmer.stem(word)\n",
+    "            tokens.append(stemmed_word)\n",
+    "\n",
+    "    return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5db039a1",
+   "id": "4a10bdb4",
    "metadata": {},
    "outputs": [],
    "source": []
