--- a/Notebooks/reddit_logreg.ipynb
+++ b/Notebooks/reddit_logreg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "288af0cf",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "0035eda6",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "9f29b079",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "4                                                                                            I could use one of those tools.  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "db722541",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
        "437682                                                                                                                      Ahh yes, the invasion europe so desperately needs right now.  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "4f1a6f6d",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "136e325c",
+   "id": "88d3187b",
    "metadata": {
     "scrolled": true
    },
@@ -10533,18 +10533,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e8146118",
+   "execution_count": 11,
+   "id": "c8e76498",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 568526 entries, 0 to 568525\n",
+      "Columns: 1500 entries, abil to zero\n",
+      "dtypes: int8(1500)\n",
+      "memory usage: 813.3 MB\n"
+     ]
+    }
+   ],
    "source": [
     "train_vector_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ebb4e9fe",
+   "execution_count": 12,
+   "id": "4d5c2b94",
    "metadata": {},
    "outputs": [
     {
@@ -20600,7 +20612,7 @@
        "4          0    0   0     0      0      0     0       0     0    0     0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20613,8 +20625,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "700e5a5f",
+   "execution_count": 13,
+   "id": "7d85be10",
    "metadata": {},
    "outputs": [
     {
@@ -30670,7 +30682,7 @@
        "4          0    0   0     0      0      0     0       0     0    0     0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30683,8 +30695,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "aa9b85ba",
+   "execution_count": 14,
+   "id": "c1ba6bd6",
    "metadata": {},
    "outputs": [
     {
@@ -30698,7 +30710,7 @@
        "Name: comment, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30709,8 +30721,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9eb74243",
+   "execution_count": 15,
+   "id": "68369c59",
    "metadata": {},
    "outputs": [
     {
@@ -30718,23 +30730,25 @@
      "output_type": "stream",
      "text": [
       "Train score: 0.6608879804969342\n",
-      "Val score: 0.6569344991530746\n"
+      "Val score: 0.6569344991530746\n",
+      "Val score: 0.658163123963606\n"
      ]
     }
    ],
    "source": [
-    "logreg = LogisticRegression()\n",
+    "logreg = LogisticRegression(max_iter=5000, random_state=42)\n",
     "\n",
     "logreg.fit(train_vector_df, y_train)\n",
     "\n",
     "print(f'Train score: {logreg.score(train_vector_df, y_train)}')\n",
-    "print(f'Val score: {logreg.score(val_vector_df, y_val)}')"
+    "print(f'Val score: {logreg.score(val_vector_df, y_val)}')\n",
+    "print(f'Val score: {logreg.score(test_vector_df, y_test)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1c46c71c",
+   "execution_count": 16,
+   "id": "320a7261",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30744,7 +30758,7 @@
     "c_range = np.array([0.001, 0.01, 0.1, 1, 10, 100, 1000])\n",
     "\n",
     "for c in c_range:\n",
-    "    logreg = LogisticRegression(C=c)\n",
+    "    logreg = LogisticRegression(C=c, random_state=42)\n",
     "    \n",
     "    logreg.fit(train_vector_df, y_train)\n",
     "    \n",
@@ -30754,8 +30768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0ffd7c16",
+   "execution_count": 17,
+   "id": "c1f36ece",
    "metadata": {},
    "outputs": [
     {
@@ -30783,8 +30797,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "0831761f",
+   "execution_count": 18,
+   "id": "09c0787b",
    "metadata": {
     "scrolled": true
    },
@@ -30814,8 +30828,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "dc0cb236",
+   "execution_count": 19,
+   "id": "800cce50",
    "metadata": {},
    "outputs": [
     {
@@ -30843,8 +30857,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d6c1372e",
+   "execution_count": 20,
+   "id": "c6aeb386",
    "metadata": {},
    "outputs": [
     {
@@ -30869,8 +30883,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "93020ac6",
+   "execution_count": 21,
+   "id": "d332e88a",
    "metadata": {},
    "outputs": [
     {
@@ -40940,7 +40954,7 @@
        "4  0.0        0.0  0.0  0.0   0.0    0.0    0.0   0.0     0.0   0.0  0.0   0.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40953,8 +40967,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "8c6316b4",
+   "execution_count": 22,
+   "id": "ca00d6d8",
    "metadata": {},
    "outputs": [
     {
@@ -51031,7 +51045,7 @@
        "4    0.0   0.0     0.0   0.0  0.0   0.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51044,8 +51058,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "d54980ab",
+   "execution_count": 23,
+   "id": "bb733486",
    "metadata": {},
    "outputs": [
     {
@@ -61108,7 +61122,7 @@
        "4    0.0    0.0   0.0     0.0   0.0  0.0   0.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61122,7 +61136,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8bc3252e",
+   "id": "091c644d",
    "metadata": {},
    "outputs": [
     {
@@ -61135,7 +61149,7 @@
     }
    ],
    "source": [
-    "tfidf_logreg = LogisticRegression()\n",
+    "tfidf_logreg = LogisticRegression(max_iter=5000, random_state=42)\n",
     "\n",
     "tfidf_logreg.fit(train_tfidf, y_train)\n",
     "\n",
@@ -61145,10 +61159,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "12032509",
+   "execution_count": 25,
+   "id": "7bc3abf8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gravi\\anaconda3\\Lib\\site-packages\\sklearn\\feature_extraction\\text.py:525: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate a list of tuples - each tuple is the name of the transform + the transformer\n",
     "vectorizers = [('count_vect', CountVectorizer(min_df=25, tokenizer=tokenizer, max_features=750)),\n",
@@ -61168,8 +61191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "7c169974",
+   "execution_count": 26,
+   "id": "104aaa07",
    "metadata": {
     "scrolled": true
    },
@@ -72718,7 +72741,7 @@
        "4           0.0           0.0          0.0          0.0         0.0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72731,8 +72754,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "696da569",
+   "execution_count": 27,
+   "id": "489cd3de",
    "metadata": {},
    "outputs": [
     {
@@ -72741,7 +72764,7 @@
        "(568526, 1500)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72752,8 +72775,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "65a5e045",
+   "execution_count": 28,
+   "id": "9f5c47ab",
    "metadata": {},
    "outputs": [
     {
@@ -84300,7 +84323,7 @@
        "4           0.0           0.0          0.0          0.0         0.0  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84313,8 +84336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "ba9d66a6",
+   "execution_count": 29,
+   "id": "96805fc4",
    "metadata": {},
    "outputs": [
     {
@@ -95861,7 +95884,7 @@
        "4           0.0           0.0          0.0          0.0         0.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95874,11 +95897,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "3aa57ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Score: 0.6565662784111896\n",
+      "Validation Score: 0.65533563049776\n",
+      "Test Score: 0.6545656742348989\n"
+     ]
+    }
+   ],
+   "source": [
+    "union_logreg = LogisticRegression(max_iter=5000, random_state=42)\n",
+    "\n",
+    "union_logreg.fit(train_union, y_train)\n",
+    "\n",
+    "print(f'Train Score: {union_logreg.score(train_union, y_train)}')\n",
+    "print(f'Validation Score: {union_logreg.score(val_union, y_val)}')\n",
+    "print(f'Test Score: {union_logreg.score(test_union, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f59ded69",
+   "id": "4563915b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "solver_train_acc = []\n",
+    "solver_val_acc = []\n",
+    "\n",
+    "solvers = ['newton-cholesky', 'sag', 'saga']\n",
+    "\n",
+    "for solver in solvers:\n",
+    "    solver_logreg = LogisticRegression(solver=solver, max_iter=5000, random_state=42)\n",
+    "    \n",
+    "    solver_logreg.fit(train_union, y_train)\n",
+    "    \n",
+    "    solver_train_acc.append(solver_logreg.score(train_union, y_train))\n",
+    "    solver_val_acc.append(solver_logreg.score(val_union, y_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "236c61f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure()\n",
+    "plt.plot(solver_train_acc, solvers, color='salmon', marker='o', label='Train Accuracy')\n",
+    "plt.plot(solver_val_acc, solvers, color='cornflowerblue', marker='o', label='Validation Accuracy')\n",
+    "plt.title('Train/Validation Accuracy by Solver')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.xlable('Solvers')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d658aaa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Best Train Accuracy: {max(solver_train_acc)}')\n",
+    "print(f'Best Validation Accuracy: {max(solver_val_acc)}')"
+   ]
   }
  ],
  "metadata": {
