very important change that will reduce the computational time by a factor of infinity

--- a/Notebooks/reddit_logreg.ipynb
+++ b/Notebooks/reddit_logreg.ipynb
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "88d3187b",
+   "id": "717b4843",
    "metadata": {
     "scrolled": true
    },
@@ -10534,7 +10534,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c8e76498",
+   "id": "495db294",
    "metadata": {},
    "outputs": [
     {
@@ -10556,7 +10556,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4d5c2b94",
+   "id": "7a4d0025",
    "metadata": {},
    "outputs": [
     {
@@ -20626,7 +20626,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7d85be10",
+   "id": "257e4fad",
    "metadata": {},
    "outputs": [
     {
@@ -30696,7 +30696,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c1ba6bd6",
+   "id": "aaef89de",
    "metadata": {},
    "outputs": [
     {
@@ -30722,7 +30722,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "68369c59",
+   "id": "0a656155",
    "metadata": {},
    "outputs": [
     {
@@ -30748,7 +30748,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "320a7261",
+   "id": "4a12126b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30769,7 +30769,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c1f36ece",
+   "id": "c67e38ac",
    "metadata": {},
    "outputs": [
     {
@@ -30798,7 +30798,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "09c0787b",
+   "id": "24ebd041",
    "metadata": {
     "scrolled": true
    },
@@ -30829,7 +30829,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "800cce50",
+   "id": "7f225d74",
    "metadata": {},
    "outputs": [
     {
@@ -30858,7 +30858,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c6aeb386",
+   "id": "ecd96899",
    "metadata": {},
    "outputs": [
     {
@@ -30884,7 +30884,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d332e88a",
+   "id": "13d5870a",
    "metadata": {},
    "outputs": [
     {
@@ -40968,7 +40968,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ca00d6d8",
+   "id": "67e0a734",
    "metadata": {},
    "outputs": [
     {
@@ -51059,7 +51059,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bb733486",
+   "id": "5e6c4dae",
    "metadata": {},
    "outputs": [
     {
@@ -61136,7 +61136,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "091c644d",
+   "id": "a12f14dd",
    "metadata": {},
    "outputs": [
     {
@@ -61160,7 +61160,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7bc3abf8",
+   "id": "b68da35a",
    "metadata": {},
    "outputs": [
     {
@@ -61192,7 +61192,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "104aaa07",
+   "id": "105dd990",
    "metadata": {
     "scrolled": true
    },
@@ -72755,7 +72755,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "489cd3de",
+   "id": "02a4490d",
    "metadata": {},
    "outputs": [
     {
@@ -72776,7 +72776,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9f5c47ab",
+   "id": "182d5c33",
    "metadata": {},
    "outputs": [
     {
@@ -84337,7 +84337,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "96805fc4",
+   "id": "77a70993",
    "metadata": {},
    "outputs": [
     {
@@ -95898,7 +95898,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3aa57ecd",
+   "id": "0a7ee006",
    "metadata": {},
    "outputs": [
     {
@@ -95924,14 +95924,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4563915b",
+   "id": "c23ed7a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "solver_train_acc = []\n",
     "solver_val_acc = []\n",
     "\n",
-    "solvers = ['newton-cholesky', 'sag', 'saga']\n",
+    "solvers = ['liblinear', 'sag', 'saga']\n",
     "\n",
     "for solver in solvers:\n",
     "    solver_logreg = LogisticRegression(solver=solver, max_iter=5000, random_state=42)\n",
@@ -95945,7 +95945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "236c61f7",
+   "id": "c307edb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95962,13 +95962,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d658aaa9",
+   "id": "5f4a1add",
    "metadata": {},
    "outputs": [],
    "source": [
     "print(f'Best Train Accuracy: {max(solver_train_acc)}')\n",
     "print(f'Best Validation Accuracy: {max(solver_val_acc)}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fdfe36f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
